<resources>
    <string name="app_name">OekoNav</string>
    <string name="title_activity_register" translatable="false">RegisterActivity</string>
    <string name="title_activity_map" translatable="false">MapActivity</string>
    <string name="register_new_account">Register New Account</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register">register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="title_activity_navdrawmenu" translatable="false">navdrawmenu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_friends">Friends</string>
    <string name="menu_challenges">Challenges</string>
    <string name="menu_mailbox">Mailbox</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow" translatable="false">Slideshow</string>
    <string name="menu_tools" translatable="false">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_friendlist_button_add_friend">Add Friend</string>
    <string name="activity_add_challenge_txt_creator_username">Creator Username</string>
    <string name="activity_add_challenge_txtview_difficulty">Difficulty:</string>
    <string name="activity_add_challenge_button_search">Search</string>
    <string name="activity_add_challenge_txt_challenge_name">Challenge Name</string>
    <string name="insert_the_proactivity_add_friend_txtview_filename_of_the_friend">Insert the Profilename of the Friend:</string>
    <string name="activity_challenge_profile_txt_name_of_the_challenge">Name of the Challenge</string>
    <string name="activity_challenge_profile_txtview_reward">Reward:</string>
    <string name="activity_challenge_profile_txt_1000">1000</string>
    <string name="activity_challenge_profile_txtview_discription">Discription</string>
    <string name="activity_challenge_profile_txt_challangdescription">The Description of the challange scription of the challangescription of the challangescription of the challangescription of the challangescription of the challangescription of the challangescription of the challangescription of the challangescription of the challangescription of the challangescription of the challangescription of the challangescription of the challangescription of the challangescription of the challangescription of the challange</string>
    <string name="activity_challenge_profile_button_i_give_up">I Give up</string>
    <string name="activity_challenge_profile_button_completed">Completed</string>
    <string name="activity_challenge_profile_button_accept">Accept</string>
    <string name="activity_challenge_profile_button_deny">Deny</string>
    <string name="activity_challenge_profile_button_add_challange">Add Challenge</string>
    <string name="activity_create_challenge_edittext_challenge_name">Name of the Challenge</string>
    <string name="activity_create_challenge_edittext_challenge_description">Description of the Challenge</string>
    <string name="activity_create_challenge_txtview_difficulty">Difficulty:</string>
    <string name="activity_create_challenge_button_create_challenge">Create Challenge</string>
    <string name="activity_friend_profile_txtview_unknown_user">Unknown User</string>
    <string name="activity_friend_profile_txtview_score">Score:</string>
    <string name="activity_friend_profile_txtview_Standard_Score">0</string>
    <string name="activity_friend_profile_txtview_profiledescription">TextView I have a tableLayout with two columns and two rows, both rows and the last column have match_parent for width but the layout isn\'t filling the parent width, it comports itself like it had wrap_content.I have a tableLayout with two columns and two rows, both rows and the last column have match_parent for width but the layout isn\'t filling the parent width, it comports itself like it had wrap_content.I have a tableLayout with two columns and two rows, both rows and the last column have match_parent for width but the layout isn\'t filling the parent width, it comports itself like it had wrap_content.I have a tableLayout with two columns and two rows, both rows and the last column have match_parent for width but the layout isn\'t filling the parent width, it comports itself like it had wrap_content.I have a tableLayout with two columns and two rows, both rows and the last column have match_parent for width but the layout isn\'t filling the parent width, it comports itself like it had wrap_content.I have a tableLayout with two columns and two rows, both rows and the last column have match_parent for width but the layout isn\'t filling the parent width, it comports itself like it had wrap_content.I have a tableLayout with two columns and two rows, both rows and the last column have match_parent for width but the layout isn\'t filling the parent width, it comports itself like it had wrap_content.I have a tableLayout with two columns and two rows, both rows and the last column have match_parent for width but the layout isn\'t filling the parent width, it comports itself like it had wrap_content.I have a tableLayout with two columns and two rows, both rows and the last column have match_parent for width but the layout isn\'t filling the parent width, it comports itself like it had wrap_content.</string>
    <string name="activity_friend_profile_imagedescription_profileimage">Profile image</string>
    <string name="activity_friend_profile_image_remove_friend">Remove Friend Image Button</string>
    <string name="activity_main_btn_login">Login</string>
    <string name="activity_main_btn_logoheader">ÖkoNav</string>
    <string name="activity_main_textView_register">No Account Yet? Click Here</string>
    <string name="activity_main_txtinput_username">Username</string>
    <string name="activity_main_txtinput_password">Password</string>
    <string name="activity_spalshscreen_image_description">Loading...</string>
    <string name="content_register_txt_header">ÖkoNav</string>
    <string name="content_register_txt_email">Email</string>
    <string name="content_register_txt_confirm_email">Confirm Email</string>
    <string name="content_register_txt_error">Default Error Message</string>
    <string name="fragment_challenges_btn_create_challenge">Create Challenge</string>
    <string name="fragment_challenges_btn_add_challenge">Add Challenge</string>
    <string name="fragment_profile_txtview_profile_name">Unknown User</string>
    <string name="fragment_profile_imagedescription_profile">Profilepicture</string>
    <string name="fragment_profile_txtview_score">Score:</string>
    <string name="fragment_profile_txtview_score_value">0</string>
    <string name="fragment_profile_txtview_profiledescription">TextView I have a tableLayout with two columns and two rows, both rows and the last column have match_parent for width but the layout isn\'t filling the parent width, it comports itself like it had wrap_content.I have a tableLayout with two columns and two rows, both rows and the last column have match_parent for width but the layout isn\'t filling the parent width, it comports itself like it had wrap_content.I have a tableLayout with two columns and two rows, both rows and the last column have match_parent for width but the layout isn\'t filling the parent width, it comports itself like it had wrap_content.I have a tableLayout with two columns and two rows, both rows and the last column have match_parent for width but the layout isn\'t filling the parent width, it comports itself like it had wrap_content.I have a tableLayout with two columns and two rows, both rows and the last column have match_parent for width but the layout isn\'t filling the parent width, it comports itself like it had wrap_content.I have a tableLayout with two columns and two rows, both rows and the last column have match_parent for width but the layout isn\'t filling the parent width, it comports itself like it had wrap_content.I have a tableLayout with two columns and two rows, both rows and the last column have match_parent for width but the layout isn\'t filling the parent width, it comports itself like it had wrap_content.I have a tableLayout with two columns and two rows, both rows and the last column have match_parent for width but the layout isn\'t filling the parent width, it comports itself like it had wrap_content.I have a tableLayout with two columns and two rows, both rows and the last column have match_parent for width but the layout isn\'t filling the parent width, it comports itself like it had wrap_content.</string>
    <string name="fragment_profile_btn_edit_profile">Edit Profile</string>
    <string name="fragment_profile_txtview_challengename">Default Name</string>
    <string name="fragment_profile_txt_challengecreator">Default Creator</string>
    <string name="fragment_profile_btn_info">Info</string>
    <string name="row_item_add_friends_list_Username">Default Username</string>
    <string name="row_item_add_friends_list_btn_add_friend">Add Friend</string>
    <string name="row_item_friendlist_txt_name">Sample Name</string>
    <string name="row_item_friendlist_txt_score">0</string>
    <string name="row_item_friendlist_btn_remove">Remove</string>
    <string name="row_item_mailbox_txt_name">Sample Name</string>
    <string name="row_item_mailbox_txt_type">Sample Type</string>
    <string name="row_item_mailbox_btn_accept">Accept</string>
    <string name="row_item_mailbox_imagedes_delete">Delete</string>
</resources>
