<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FriendProfile">

    <TextView
        android:id="@+id/textView_ProfileName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/activity_friend_profile_txtview_unknown_user"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/cardView"
        app:layout_constraintStart_toStartOf="@+id/cardView"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="47dp"
        android:layout_marginEnd="20dp"
        app:cardBackgroundColor="@color/ef_white"
        app:cardCornerRadius="250dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            app:cardCornerRadius="250dp">

            <ImageView
                android:id="@+id/img_profile_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/activity_friend_profile_imagedescription_profileimage"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/common_google_signin_btn_icon_dark"
                tools:srcCompat="@tools:sample/avatars[11]" />

        </androidx.cardview.widget.CardView>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView_ScoreName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_friend_profile_txtview_score"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/cardView"
        app:layout_constraintEnd_toStartOf="@+id/cardView"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView_ScoreValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/activity_friend_profile_txtview_Standard_Score"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/textView_ScoreName"
        app:layout_constraintStart_toStartOf="@+id/textView_ScoreName"
        app:layout_constraintTop_toBottomOf="@+id/textView_ScoreName" />

    <ScrollView
        android:id="@+id/scrollView4"
        android:layout_width="295dp"
        android:layout_height="180dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="@+id/textView_ProfileName"
        app:layout_constraintStart_toStartOf="@+id/textView_ProfileName"
        app:layout_constraintTop_toBottomOf="@+id/textView_ProfileName">

        <TextView
            android:id="@+id/textView_ProfileDesc"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_friend_profile_txtview_profiledescription" />
    </ScrollView>

    <ImageButton
        android:id="@+id/removeFriendImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/activity_friend_profile_image_remove_friend"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/scrollView4"
        app:layout_constraintStart_toStartOf="@+id/scrollView4"
        app:srcCompat="@android:drawable/btn_dialog" />

</androidx.constraintlayout.widget.ConstraintLayout>